[package]
name = "nsv"
version = "0.0.11"
edition = "2021"
description = "NSV (Newline-Separated Values) format parser and encoder"
license = "MIT"
repository = "https://github.com/nsv-format/nsv-rust"
homepage = "https://nsv-format.org"
keywords = ["nsv", "data", "format", "parser"]
categories = ["parsing", "data-structures"]
authors = ["naming"]

[dependencies]
rayon = "1.10"
memchr = "2.7"

[dev-dependencies]
criterion = "0.5"
csv = "1.3"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "comparison"
harness = false
